# ai-engineer-journey

./: README.md
week-01-python/: README.md  pyproject.toml
week-01-python/src/week_01_python/: __init__.py  cli.py  config.py  models.py  scraper.py  summarizer.py
week-01-python/tests/: test_scrapper.py  test_summarizer.py
week-02-numpy-pandas/: README.md  pyproject.toml
week-02-numpy-pandas/notebooks/: 01_numpy_basics.ipynb  02_pandas_basics.ipynb  03_visualization.ipynb  04_spotify_eda.ipynb
week-02-numpy-pandas/src/week_02_numpy_pandas/: __init__.py
