[project]
name = "week-02-numpy-pandas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kholis", email = "mhtrmkholis@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.31.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "plotly>=6.7.0",
    "seaborn>=0.13.2",
]

[project.scripts]
week-02-numpy-pandas = "week_02_numpy_pandas:main"

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=8.4.2",
    "ruff>=0.15.12",
]
